# kntp-lib

./: .gitignore  README.md  kntp_lib.py  pyproject.toml
.github/workflows/: tests.yml
examples/: quickstart.py  resilient_usage.py
src/kntp/: __init__.py  core.py
tests/: test_core.py
